Linked CSS to HTML file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Etch-A-Sketch</title>
+        <link rel="stylesheet" href="etch.css">
     </head>
 
     <body>
+        <h3>ETCH - A - SKETCH</h3>
         <button id="btn">Click Me!</button>
         <div id="container"></div>
     </body>
