Linked JavaScript to HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <body>
         <h3>ETCH - A - SKETCH</h3>
-        <button id="btn">Click Me!</button>
+        <span>Want to specify or change grid dimension? <button id="btn">Click Me!</button></span>
         <div id="container"></div>
     </body>
+
+    <script src="main.jss"></script>
 </html>
