Modified HTML file to include buttons for color
Each button will change the default color that the divs have as a
background when the mouse hovers over them to the selected color.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h3>ETCH - A - SKETCH</h3>
         <span>Want to specify or change grid dimension? <button id="btn">Click Me!</button></span>
         <div id="container"></div>
+        <button id="clear">Clear Canvas</button>
     </body>
 
-    <script src="main.jss"></script>
+    <script src="main.js"></script>
 </html>
