Styled buttons to change background color.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
         <h3>ETCH - A - SKETCH</h3>
         <span>Want to specify or change grid dimension? <button id="btn">Click Me!</button></span>
         <div id="container"></div>
-        <button id="clear">Clear Canvas</button>
+        
+        <div id="buttons">
+            <button id="clear">Clear Canvas</button>
+            <button id="default">Default</button>
+            <button id="red">Red</button>
+            <button id="green">Green</button>
+        </div>
     </body>
 
     <script src="main.js"></script>
